--- a/mauiBlazor/mauiBlazor.csproj
+++ b/mauiBlazor/mauiBlazor.csproj
@@ -73,8 +73,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="gRPCAutomasiKandang">
-        <HintPath>..\..\gRPCAutomasiKandang\gRPCAutomasiKandang\obj\Debug\net6.0\gRPCAutomasiKandang.dll</HintPath>
+      <Reference Include="gRPC">
+        <HintPath>..\..\gRPCAutomasiKandang\gRPCAutomasiKandang\obj\Debug\net6.0\gRPC.dll</HintPath>
       </Reference>
       <Reference Include="Pantheon">
         <HintPath>C:\Users\mafif\source\repos\Pantheon\Pantheon\bin\Debug\net6.0\Pantheon.dll</HintPath>
